--- a/Microsoft.Toolkit.Uwp.UI.Controls/Menu/Menu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Menu/Menu.xaml
@@ -2,8 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
                     xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:contract5Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
-    xmlns:contract5NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)">
+    xmlns:contract5NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+    <!--xmlns:contract5Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+    xmlns:contract5NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)">-->
 
     <Style TargetType="MenuFlyoutPresenter" x:Key="BaseMenuFlyoutStyle">
         <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundChromeHighBrush}" />
@@ -50,7 +51,8 @@
         <Setter Property="Background" Value="{StaticResource SystemControlBackgroundChromeMediumLowBrush}" />
     </contract5NotPresent:Style>
 
-    <contract5Present:Style TargetType="MenuFlyoutPresenter" BasedOn="{StaticResource BaseMenuFlyoutStyle}" x:Key="MenuFlyoutStyle">
+    <!-- UNO TODO 
+	<contract5Present:Style TargetType="MenuFlyoutPresenter" BasedOn="{StaticResource BaseMenuFlyoutStyle}" x:Key="MenuFlyoutStyle">
         <Setter Property="Background">
             <Setter.Value>
                 <AcrylicBrush BackgroundSource="Backdrop" 
@@ -59,7 +61,7 @@
                               FallbackColor="{StaticResource SystemChromeMediumLowColor}" />
             </Setter.Value>
         </Setter>
-    </contract5Present:Style>
+    </contract5Present:Style>-->
 
     <Style TargetType="local:Menu">
         <Setter Property="MenuFlyoutStyle" Value="{StaticResource MenuFlyoutStyle}" />
