--- a/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
@@ -14,11 +14,11 @@
                                 <StackPanel.RenderTransform>
                                     <TranslateTransform x:Name="Translate" Y="0" />
                                 </StackPanel.RenderTransform>
-                                <ContentPresenter x:Name="Current"
+                                <ContentControl x:Name="Current"
                                                   Content="{Binding}"
                                                   ContentTemplate="{TemplateBinding ItemTemplate}"
                                                   DataContext="{x:Null}" />
-                                <ContentPresenter x:Name="Next"
+                                <ContentControl x:Name="Next"
                                                   Content="{Binding}"
                                                   ContentTemplate="{TemplateBinding ItemTemplate}"
                                                   DataContext="{x:Null}" />
