--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/AadAuthControl.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Controls/AadAuthControl.xaml
@@ -2,13 +2,14 @@
     x:Name="aadAuthControl"
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.Controls.AadAuthControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:graph="using:Microsoft.Toolkit.Uwp.UI.Controls.Graph"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Visibility="{x:Bind Path=IsEnabled, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}">
-    <Grid MaxWidth="800"
+    <win:Grid MaxWidth="800"
           Background="{StaticResource Brush-Grey-05}">
         <Grid Margin="24"
               Background="{StaticResource Brush-Grey-04}"
@@ -63,5 +64,5 @@
                 </StackPanel>
             </Grid>
         </Grid>
-    </Grid>
+    </win:Grid>
 </UserControl>
