--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/App.xaml
@@ -207,7 +207,8 @@
             </Grid>
         </DataTemplate>
 
-        <Style x:Key="HamburgerMenuItemStyle"
+		<!-- UNO TODO: This style does not override library provided style with the same name -->
+        <Style x:Key="LocalHamburgerMenuItemStyle"
                TargetType="ListViewItem">
             <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
             <Setter Property="Background" Value="Transparent" />
@@ -782,7 +783,7 @@
                                           Grid.Column="1"
                                           AutomationProperties.Name="Menu items"
                                           IsItemClickEnabled="True"
-                                          ItemContainerStyle="{StaticResource HamburgerMenuItemStyle}"
+                                          ItemContainerStyle="{StaticResource LocalHamburgerMenuItemStyle}"
                                           ItemTemplate="{TemplateBinding ItemTemplate}"
                                           ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
                                           ItemsSource="{TemplateBinding ItemsSource}"
@@ -815,7 +816,8 @@
                                     </animations:Implicit.Animations>
                                     <ListView.ItemsPanel>
                                         <ItemsPanelTemplate>
-                                            <ItemsStackPanel Orientation="Horizontal" />
+                                            <StackPanel Orientation="Horizontal" />
+                                            <!-- UNO TODO <ItemsStackPanel Orientation="Horizontal" />-->
                                         </ItemsPanelTemplate>
                                     </ListView.ItemsPanel>
                                 </ListView>
@@ -880,7 +882,7 @@
                                           Grid.Column="3"
                                           AutomationProperties.Name="Option items"
                                           IsItemClickEnabled="True"
-                                          ItemContainerStyle="{StaticResource HamburgerMenuItemStyle}"
+                                          ItemContainerStyle="{StaticResource LocalHamburgerMenuItemStyle}"
                                           ItemTemplate="{TemplateBinding OptionsItemTemplate}"
                                           ItemTemplateSelector="{TemplateBinding OptionsItemTemplateSelector}"
                                           ItemsSource="{TemplateBinding OptionsItemsSource}"
