--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/About.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/About.xaml
@@ -1,6 +1,7 @@
 ﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.Pages.About"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:xamarin="http://uno/xamarin"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +11,7 @@
       xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.Pages"
       xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
       Loaded="Page_Loaded"
-      mc:Ignorable="d">
+      mc:Ignorable="d xamarin">
 
     <Page.Resources>
 
@@ -47,11 +48,13 @@
                              <!-- TODO JELA Click="ReleaseNotes_Click"-->
                 <Grid>
                     <TextBlock Text="{x:Bind FullName}"></TextBlock>
+					<!-- UNO TODO x:Bind expression are not supported -->
 					<TextBlock HorizontalAlignment="Right"
-                               Opacity="0.5"
-                               Foreground="Black"
-                               Text="{x:Bind Published}"><!-- UNO TODO --></TextBlock>
-                </Grid>
+							   Opacity="0.5"
+							   Foreground="Black"
+							   xamarin:Text="{x:Bind Published, Converter={StaticResource FormatStringConverter}, ConverterParameter='MMM d'}"
+							   win:Text="{x:Bind Published.ToString('MMM d', {x:Null})}" />
+				</Grid>
             </HyperlinkButton>
         </DataTemplate>
 
@@ -133,12 +136,13 @@
                                 <TextBlock FontSize="20" FontFamily="Segoe UI" FontWeight="Normal">Recent Activity</TextBlock>
 
                                 <Grid Margin="0,16,0,0">
-                                    <TextBlock Text="None" 
-                                           Opacity="0.5" 
-                                           FontFamily="Segoe UI" 
-                                           FontSize="12" 
-                                           Visibility="{x:Bind local:About.VisibleIfCollectionEmpty(RecentSamples), Mode=OneWay}"></TextBlock>
-                                    <ItemsControl x:Name="RecentSamplesItemsControl"
+									<TextBlock Text="None"
+											   Opacity="0.5"
+											   FontFamily="Segoe UI"
+											   FontSize="12"
+											   win:Visibility="{x:Bind local:About.VisibleIfCollectionEmpty(RecentSamples), Mode=OneWay}" 
+											   xamarin:Visibility="{x:Bind RecentSamples, Converter={StaticResource EmptyCollectionToVisibility}}" />
+									<ItemsControl x:Name="RecentSamplesItemsControl"
                                                   ItemsPanel="{StaticResource ItemsWrapGridHorizontalTemplate}"
                                                   ItemsSource="{x:Bind RecentSamples, Mode=OneWay}"
                                                   ItemTemplate="{StaticResource RecentSampleTemplate}"
