Uno adjustment for SendMessageContentDialog

--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/Microsoft Graph Service/SendMessageContentDialog.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/Microsoft Graph Service/SendMessageContentDialog.xaml
@@ -1,5 +1,6 @@
 ﻿<ContentDialog x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.SendMessageContentDialog"
                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+               xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
@@ -43,7 +44,7 @@
                      Margin="10,0,0,0"
                      Header="Subject:" />
         </StackPanel>
-        <RichEditBox x:Name="richEditBoxContent"
+        <win:RichEditBox x:Name="richEditBoxContent"
                      Grid.Row="1"
                      Grid.ColumnSpan="2"
                      Margin="0,0,32,0" />
