Adjust samples list

--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
@@ -37,7 +37,7 @@
                 </Border>
             </StackPanel>
 
-            <ScrollViewer Grid.Row="1">
+            <ScrollViewer x:Name="scrollViewer1" Grid.Row="1">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
