--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/OneDrive Service/FoldersPickerControl.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/OneDrive Service/FoldersPickerControl.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.FoldersPickerControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -57,7 +58,8 @@
                           HorizontalAlignment="Left" 
                           VerticalAlignment="Center" 
                           Margin="0,0,0,0"
-                          Click="NavigateToButton_Click"/>
+                          win:Click="NavigateToButton_Click"/>
+						<!-- Uno TODO -->
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
