Misc samples adjustments for Uno

--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/About.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Pages/About.xaml
@@ -27,14 +27,14 @@
             <HyperlinkButton Width="267"
                              HorizontalContentAlignment="Left"
                              Style="{StaticResource AboutHyperlinkButtonStyle}"
+							 Click="RecentSample_Click" 
                              >
-				<!-- UNO TODO Click="RecentSample_Click" -->
                 <TextBlock Text="{x:Bind Name}"></TextBlock>
             </HyperlinkButton>
         </DataTemplate>
 
         <DataTemplate x:DataType="sampleapp:Sample" x:Key="NewSampleTemplate">
-            <HyperlinkButton Width="267" HorizontalContentAlignment="Left" Style="{StaticResource AboutHyperlinkButtonStyle}"> <!--TODO JELA Click="NewSample_Click"-->
+            <HyperlinkButton Width="267" HorizontalContentAlignment="Left" Style="{StaticResource AboutHyperlinkButtonStyle}" Click="NewSample_Click">
                 <TextBlock Text="{x:Bind Name}"></TextBlock>
             </HyperlinkButton>
         </DataTemplate>
@@ -44,8 +44,8 @@
                              HorizontalContentAlignment="Stretch" 
                              NavigateUri="{x:Bind Url}"
                              Width="208"
+                             Click="ReleaseNotes_Click"
                              Style="{StaticResource AboutHyperlinkButtonStyle}">
-                             <!-- TODO JELA Click="ReleaseNotes_Click"-->
                 <Grid>
                     <TextBlock Text="{x:Bind FullName}"></TextBlock>
 					<!-- UNO TODO x:Bind expression are not supported -->
@@ -59,10 +59,10 @@
         </DataTemplate>
 
         <DataTemplate x:DataType="sampleapp:LandingPageLink" x:Key="LinkTemplate">
-            <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" 
-                             NavigateUri="{x:Bind Url}"
-                             ><!-- UNO TODO Click="Link_Clicked"-->
-                <TextBlock Text="{x:Bind Title}"></TextBlock>
+			<HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}"
+							 NavigateUri="{x:Bind Url}"
+							 Click="Link_Clicked">
+				<TextBlock Text="{x:Bind Title}"></TextBlock>
             </HyperlinkButton>
         </DataTemplate>
 
@@ -183,12 +183,10 @@
                                 <TextBlock FontSize="20" FontFamily="Segoe UI" FontWeight="Normal">About the App</TextBlock>
                                 <ItemsControl Margin="0,16,0,0">
                                     <TextBlock x:Name="Version" FontSize="12" Margin="0,0,0,10"></TextBlock>
-                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="http://www.newtonsoft.com/json" >
-                                        <!--UNO TODO Click="Link_Clicked"-->
+                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="http://www.newtonsoft.com/json" Click="Link_Clicked">
                                         <TextBlock>Newtonsoft Json (Dependency)</TextBlock>
                                     </HyperlinkButton>
-                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="https://github.com/google/code-prettify">
-                                        <!--UNO TODO Click="Link_Clicked"-->
+                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="https://github.com/google/code-prettify" Click="Link_Clicked">
                                         <TextBlock>Code Prettify (Dependency)</TextBlock>
                                     </HyperlinkButton>
                                     <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="https://unsplash.com/@8moments" Click="Link_Clicked">
