--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
@@ -87,10 +87,10 @@
                                 <ComboBox x:Name="VersionEndpointDropdown" 
                                           Header="Endpoint Version" Grid.Column="1" 
                                           SelectionChanged="VersionEndpointDropdown_SelectionChanged">
-                                    <ComboBox.Items>
+                                    <!--<ComboBox.Items>-->
                                         <ComboBoxItem Tag="v2" Content="v2 - MSAL (default)"  IsSelected="True"/>
                                         <ComboBoxItem Tag="v1" Content="v1 - ADAL" />
-                                    </ComboBox.Items>
+                                    <!--</ComboBox.Items>-->
                                 </ComboBox>
                             </Grid>
                             <TextBox Margin="0,0,0,12" 
