--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/GazeInteraction/GazeInteractionPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/SamplePages/GazeInteraction/GazeInteractionPage.xaml
@@ -6,10 +6,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:g="using:Microsoft.Toolkit.Uwp.Input.GazeInteraction" 
-    g:GazeInput.Interaction="Enabled"        
-    g:GazeInput.IsCursorVisible="True"       
-    g:GazeInput.CursorRadius="20"    
     mc:Ignorable="d">
+    <!--g:GazeInput.Interaction="Enabled"        
+    g:GazeInput.IsCursorVisible="True"       
+    g:GazeInput.CursorRadius="20"-->    
     <Page.Resources>
         <local:TimeSpanConverter x:Key="ConvertTimeToMilliSecs"/>
     </Page.Resources>
