--- a/Microsoft.Toolkit.Uwp.SampleApp.Shared/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Shared/Shell.xaml
@@ -21,7 +21,7 @@
       extensions:TitleBarExtensions.ButtonBackgroundColor="{StaticResource Brand-Color}"
       extensions:TitleBarExtensions.ButtonForegroundColor="{StaticResource Grey-04}"
       extensions:TitleBarExtensions.ForegroundColor="{StaticResource Grey-04}"
-      mc:Ignorable="d">
+      mc:Ignorable="d xamarin">
     <Page.Resources>
         
 
